@@ -12,6 +12,7 @@ Version 7.0.1
   - AssocArray::getPrevious returns "false" as expected and does not throw
     OutOfBoundException anymore, when end of AssocArray is reached
   - Increased test coverage for AssocArray
+  - Added compare operator to Variant
 
 Version 7.0.0 vom 29.07.2018 (Repo-Tag: REL_7_0_0)
   - Complete Rewrite, based on Version 6.4.7
